route setPriority for json
